# untitled_frontend

./: Dockerfile
host/: Cargo.toml
host/src/: main.rs
k8/: deploy.yaml
src/: auth.js
src/components/: Home.vue  Login.vue  Nav.vue  Search.vue
src/components/projects/: CreateProject.vue  NewSourceRequest.vue  NewThread.vue  Project.vue  SourceRequest.vue  Thread.vue  UploadProject.vue
src/components/projects/project/: Files.vue  Header.vue  SourceRequests.vue  Tags.vue  Threads.vue
src/components/users/: User.vue
src/router/: index.js
src/scss/: custom.scss
