[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.6"
tower = "0.5.1"
tower-http = { version = "0.6.0", features = ["fs"] }
tower-layer = "0.3.2"
log = "0.4.22"
env_logger = "0.11.5"